Further file cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Ignore the venv dir which we place in the project root for cli ease and repeatability
 venv
-
-.hypothesis
-
 .mypy_cache
+__pycache__/
